<resources>
    <string name="app_name">Splitter</string>
<!--    Placeholders   -->
    <string name="null_number_value" translatable="false">0.00</string>
    <string name="null_integer_value" translatable="false">0</string>
<!--    Main activity   -->
    <string name="floating_action_button_add_text">Добавить запись за день</string>
    <string name="wedge_list_place_holder_text">Жми на кнопку, чтобы забить свой первый клин!</string>
    <string name="back_pressed_toast_text">"Нажмите для выхода ещё раз"</string>
<!--    Bottom menu -->
    <string name="bottom_menu_item_wedge_list">Список</string>
    <string name="bottom_menu_item_wedge_statistic">Статистика</string>
<!--    Add activity    -->
    <string name="sum_title">Клин: %1$.2f</string>
    <string name="date_title">Дата</string>
    <string name="add_title">Доход</string>
    <string name="out_title">Расход</string>
    <string name="add_extra_title">Дополнительный доход</string>
    <string name="invest_title">Инвестиции</string>
    <string name="done_button_title">Забить</string>
<!--    Context menu    -->
    <string name="item_context_menu_delete">Удалить</string>
    <string name="item_context_menu_send">Отправить</string>
<!--    Statistic activity  -->
    <string name="fragment_statistic_all_wedges_sum_title">Забито за всё время:</string>
    <string name="fragment_statistic_invests_sum_title">Из них инвестировано:</string>
    <string name="fragment_statistic_current_wedges_sum_title">Текущие накопления:</string>
    <string name="fragment_statistic_amount_of_days_title">Всего дней:</string>
<!--    Telegram intent text  -->
    <string name="share_intent_date">ОТЧЁТ за %1$s:\n</string>
    <string name="share_intent_wedge">Сумма от правила клина: %1$.2f\n</string>
    <string name="share_intent_add_extra">Заработано дополнительно: %1$.2f\n</string>
    <string name="share_intent_invest">Инвестировано: %1$.2f\n</string>
    <string name="share_intent_sum">Итого на инвестиции: %1$.2f</string>
<!--    Confirm delete dialog  -->
    <string name="confirm_delete_dialog_yes">Да</string>
    <string name="confirm_delete_dialog_no">Нет</string>
    <string name="confirm_delete_dialog_title">Подтвердите удаление</string>
    <string name="confirm_delete_dialog_message">Уверены, что хотите удалить запись за %1$s</string>
    <!--    Item  -->
    <string name="formatted_num">%1$.2f</string>
</resources>