<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="statisticViewModel"
            type="ru.svoyakmartin.splitter.screens.main.statistic.StatisticViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".screens.main.statistic.StatisticFragment">

            <TextView
                android:id="@+id/all_wedges_sum_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/fragment_statistic_all_wedges_sum_title"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/all_wedges_sum_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@{@string/formatted_num(statisticViewModel.sumWedges)}"
                android:textColor="@color/green"
                android:textSize="50sp"
                app:autoSizeMaxTextSize="50sp"
                app:autoSizeMinTextSize="22sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/all_wedges_sum_title"
                tools:text="0,00" />

            <TextView
                android:id="@+id/invests_sum_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/fragment_statistic_invests_sum_title"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/all_wedges_sum_value" />

            <TextView
                android:id="@+id/invests_sum_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@{@string/formatted_num(statisticViewModel.sumInvests)}"
                android:textColor="@color/red"
                android:textSize="50sp"
                app:autoSizeMaxTextSize="50sp"
                app:autoSizeMinTextSize="22sp"
                app:autoSizeStepGranularity="2sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/invests_sum_title"
                tools:text="0,00" />

            <TextView
                android:id="@+id/current_wedges_sum_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/fragment_statistic_current_wedges_sum_title"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/invests_sum_value" />

            <TextView
                android:id="@+id/current_wedges_sum_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@{@string/formatted_num(statisticViewModel.currentSumWedges)}"
                android:textColor="@color/yellow"
                android:textSize="50sp"
                app:autoSizeMaxTextSize="50sp"
                app:autoSizeMinTextSize="22sp"
                app:autoSizeStepGranularity="2sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_wedges_sum_title"
                tools:text="0,00" />

            <TextView
                android:id="@+id/amount_of_days_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fragment_statistic_amount_of_days_title"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_wedges_sum_value" />

            <TextView
                android:id="@+id/amount_of_days_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{statisticViewModel.totalDays.toString()}"
                android:textColor="@color/blue"
                android:textSize="50sp"
                app:autoSizeMaxTextSize="50sp"
                app:autoSizeMinTextSize="22sp"
                app:autoSizeStepGranularity="2sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amount_of_days_title"
                tools:text="0" />

            <!-- TODO: добавить количество дней без перерыва и максимальное без перерыва-->
            <!-- TODO: Quantity Strings-->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>